--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -1,6 +1,6 @@
 global:
-  scrape_interval: 15s
-  evaluation_interval: 15s
+  scrape_interval: 60s
+  evaluation_interval: 60s
 
 alerting:
   alertmanagers:
@@ -19,11 +19,15 @@ scrape_configs:
 
   - job_name: alertmanager
     static_configs:
-      - targets: ['localhost:9093']
+      - targets: ['alertmanager:9093']
 
   - job_name: 'grafana'
     static_configs:
-      - targets: ['localhost:3000']
+      - targets: ['grafana:3000']
+
+  - job_name: 'cozify'
+    static_configs:
+      - targets: ['cozify-exporter:5000']
 
 remote_write:
   - url: "http://timescale-prometheus:9201/write"
