--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -31,7 +31,7 @@ scrape_configs:
 
   - job_name: ruuvi
     static_configs:
-      - targets: ['ruuvi-prometheus:9521']
+      - targets: ['172.22.0.1:9521']
 
 remote_write:
   - url: "http://timescale-prometheus:9201/write"
