give human readable names to ruuvi tags

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,9 @@ services:
   # https://prometheus.io/docs/prometheus/latest/installation/
   prometheus:
     image: quay.io/prometheus/prometheus
+    command: >
+      --web.enable-admin-api
+      --config.file=/etc/prometheus/prometheus.yml
     ports:
       - 9090:9090
     volumes:
